[FEAT] Moderation Commands & [REFACTOR] Refactored Permissions System (#24)
* added moderation warn command

* [REFACTOR] Upgraded to snapshot of jda-commands 4.0.0-beta.3

[REFACTOR] Upgraded to snapshot of jda-commands 4.0.0-beta.3

* update to jda-commands@4.0-beta.3

* added timeout, kick, ban commands

* added moderation commands, without moderative execution

* implemented warn, kick, timeout

* implemented ban

* implemented auto revert

* sending message when timeout gets reverted

* added message for warn reversion

* added revert command

* code cleanup

* refactor permissions package

* fix ci

* rename

* refactoring

* more refactoring

* added moderation delete command and some smaller fixes

* enhanced revert functionality and added moderation delete command

* fix: issuerUsername in moderation act message was display not username

* implement fixes

* implement more fixes

* implement even more fixes

* hopefully enough refactoring

---------

Co-authored-by: Kaktushose <matti.psk@gmail.com>